--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -70,6 +70,10 @@
       <p>訂單金額：<%= @order.order_price %></p>
       <p>面交時間：<%= time_tag @order.dessert.pick_time %></p>
       <p>面交地點：<%= @order.pick_location %></p>
+      
+      <% if @order.payment_status == "not_paid" %>
+        <%= link_to "Pay Now", checkout_spgateway_order_path(@order), method: :post, class: "btn btn-success" %>
+      <% end %>
     </div>
 
   </div>
