--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -65,6 +65,7 @@
             <th>訂購數量</th>
             <th>總金額</th>
             <th>買家留言</th>
+            <th>付款狀態</th>
             <th>訂單狀態</th>
           </tr>
 
@@ -80,6 +81,13 @@
               <td><%= order.amount %></td>
               <td><%= order.order_price %></td> 
               <td><%= order.message %></td>
+              <td>
+                <% if order.payment_status == "not_paid" %>
+                  尚未付款
+                <% else %>
+                  已付款
+                <% end %>
+              </td>
               <td>
                 <%= form_for [@dessert, order] do |f| %>
                   <%= f.select :shipping_status, [ '未完成', '已完成' ] %>
