--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/"><%= image_tag "logo.png", width: 40, height: 40, class: "img-circle" %></a>
+            <a class="navbar-brand" href="/"><%= image_tag "logo.png", height: 40 %></a>
           </div><!-- /.navbar-header -->
 
           <div class="navbar-left">
