--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,9 @@
             <div class="collapse navbar-collapse" id="navbar-collapse">
               <ul class="nav navbar-nav">
                 <li class="navbar-brand">
-                  <%= link_to '新募資', new_dessert_path %>
+                  <%= link_to new_dessert_path do %>
+                    <i class="fa fa-birthday-cake"></i> 建立新募資
+                  <% end %>
                 </li>
               </ul>
             </div>
