--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,11 @@
               <% if current_user %>
 
                 <% if current_user&.admin? %>
-                  <li class="navbar-brand"><%= link_to '後台管理', admin_root_path %></li>
+                  <li class="navbar-brand">
+                    <%= link_to admin_root_path do %>
+                      <i class="fa fa-wrench"></i> 後台管理
+                    <% end %>
+                </li>
                 <% end %>
       
                 <li class="dropdown">
